Updated Unused Database File Storage Code for client