@@ -159,7 +159,7 @@ public class ClientAgreementService {
         try {
             repository.saveAll(entities);
         } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to save agreement for client [%s]", entities.get(0).getClient().getId());
+            String errorMessage = String.format("Failed to save agreement for client [%s]", entities.getFirst().getClient().getId());
             throw new LnFException(errorMessage);
         }
     }
